syntax = "proto3";

package calculator;

option go_package="gitlab.com\\tleuzhan13\\grpc-go-course\\greet\\greetpb;greetpb";

message DecomposeRequest {
    int32 num = 1;
}

message DecomposeResponse {
    int32 decompose = 1;
}

message AverageRequest{
    float num = 1;
}

message AverageResponse{
    float avg = 1;
}

service CalculatorService {
    rpc PrimeNumberDecomposition(DecomposeRequest) returns (stream DecomposeResponse) {}
    rpc ComputeAverage(stream AverageRequest) returns (AverageResponse){}
}
